# genai-metadata-back

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
gptmodel/: __init__.py  core.py  utils.py
gptmodel/api ./: class.py
model/: class.py
